--- a/clients.html
+++ b/clients.html
@@ -45,14 +45,24 @@
 
   <div class="off-canvas-content" data-off-canvas-content>
     <!-- Your page content lives here -->
-    <div class="grid-x grid-padding-y grid-padding-x">
-      <div class="small-3 cell card">anything</div>
-      <div class="small-3 cell card">anything</div>
-      <div class="small-3 cell card">anything</div>
-      <div class="small-3 cell card">anything</div>
-      <div class="small-3 cell card">anything</div>
-      <div class="small-3 cell card">anything</div>
-    </div>
+    <form class="callout text-center">
+            <h2>Become A Member</h2>
+            <div class="floated-label-wrapper">
+              <label for="full-name">Full name</label>
+              <input type="text" id="full-name" name="full name input" placeholder="Full name">
+            </div>
+            <div class="floated-label-wrapper">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email input" placeholder="Email">
+            </div>
+            <div class="floated-label-wrapper">
+              <label for="pass">Password</label>
+              <input type="password" id="pass" name="password input" placeholder="Password">
+            </div>
+            <input class="button expanded" type="submit" value="Sign up">
+          </form>
+          
+          
   </div>
 
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
