--- a/public/clients.html
+++ b/public/clients.html
@@ -25,11 +25,11 @@
       <span class="title-bar-text"><a href="#"><i class="fi-home title-bar-logo"></i></a></span>
     </div>
   </div>
-<!-- off canvas element -->
+  <!-- off canvas element -->
   <div class="off-canvas position-left" id="offCanvas" data-off-canvas>
 
     <!-- Close button -->
-<!-- <button class="close-button" aria-label="Close menu" type="button" data-close>
+    <!-- <button class="close-button" aria-label="Close menu" type="button" data-close>
                 <span aria-hidden="true">&times;</span>
               </button> -->
 
@@ -38,14 +38,52 @@
       <li><a href="index.html">Home<i class="fi-home nav-icon"></i></a></li>
       <li><a href="clients.html">Clients<i class="fi-torsos nav-icon"></i></a></li>
       <li><a href="#">Accounting<i class="fi-dollar nav-icon"></i></a></li>
-      
+
     </ul>
 
   </div>
 
   <div class="off-canvas-content" data-off-canvas-content>
     <!-- Your page content lives here -->
-    <div class="grid-x grid-margin-y grid-margin-x" id="clientOverview"></div>
+    <div class="grid-x align-center">
+      <div class="small-12 medium-8 large-6 cell">
+        <form class="callout text-center">
+          <h2>Add a Client</h2>
+          <div class="floated-label-wrapper">
+            <label for="full-name">Full name</label>
+            <input type="text" id="fullName" name="full name input" placeholder="Full name">
+          </div>
+          <div class="floated-label-wrapper">
+            <label for="addressLineOne">Address Line 1</label>
+            <input type="text" id="addressLineOne" name="addressLineOne" placeholder="123 Main Street">
+          </div>
+          <div class="floated-label-wrapper">
+            <label for="addressLineTwo">Address Line 2</label>
+            <input type="text" id="addressLineTwo" name="addressLineTwo" placeholder="apt 300">
+          </div>
+          <div class="floated-label-wrapper">
+            <label for="city">City</label>
+            <input type="text" id="city" name="cityInput" placeholder="Houston">
+          </div>
+          <div class="floated-label-wrapper">
+            <label for="state">State</label>
+            <input type="text" id="state" name="stateInput" placeholder="TX">
+          </div>
+          <div class="floated-label-wrapper">
+            <label for="zip">Zip Code</label>
+            <input type="number" id="zip" name="zipInput" placeholder="77498">
+          </div>
+          <div class="floated-label-wrapper">
+            <label for="phone">Phone</label>
+            <input type="tel" id="phone" name="phoneInput" placeholder="Ex: 555-555-5555">
+          </div>
+          <div class="floated-label-wrapper">
+            <label for="frequency">Frequency</label>
+            <input type="number" id="frequency" name="frequencyInput" placeholder="3">
+          </div>
+          <input class="button expanded" id="addClientBtn" type="submit" value="Sign up">
+        </form>
+      </div>
     </div>
   </div>
 
@@ -64,7 +102,7 @@
   </script>
   <script src="assets/js/vendor/jquery.js"></script>
   <script src="assets/js/vendor/foundation.min.js"></script>
-  <script src="assets/js/home.js"></script>
+  <script src="assets/js/clients.js"></script>
   <script src="assets/js/app.js"></script>
 </body>
 
